[package]
name = "m5stack-test"
version = "0.1.0"
authors = ["season1618"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.1", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.17.0", features = [ "esp32" ] }
esp-println = { version = "0.9.1", features = ["esp32", "log"] }
esp-alloc = { version = "0.3.0" }
esp-wifi = { version = "0.5.0", features = [
    "esp32",
    "phy-enable-usb",
    "utils",
    "wifi",
] }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }

display-interface-spi = "0.5.0"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"
embedded-graphics = "0.8.0"
mipidsi = { path = "C:/Users/seaso/work/mipidsi/mipidsi/" }

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
