[package]
name = "m5stack-test"
version = "0.1.0"
authors = ["season1618"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.1", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.17.0", features = [ "esp32" ] }
esp-println = { version = "0.9.1", features = ["esp32", "log"] }

display-interface-spi = "0.5.0"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"
embedded-graphics = "0.8.0"
mipidsi = { path = "C:/Users/seaso/work/mipidsi/mipidsi/" }
