[package]
name = "m5stack-test"
version = "0.1.0"
authors = ["season1618"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.1", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp32-hal = "0.15.0"
esp-println = { version = "0.9.1", features = ["esp32", "log"] }

display-interface-spi = "0.4.1"
embedded-hal = "0.2.7"
embedded-graphics = "0.8.0"
mipidsi = "0.7.1"
axp192 = "0.1.1"
